Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56266

qtdeclarative doesn't build with gcc 6 as developer-build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.3
    • 5.6.1, 5.7.1
    • Quick: Other
    • None

    Description

      The build fails with the warning 'self-comparison always evaluates to true [-Wtautological-compare]' which is raised to error.

      It appears to be caused by a gcc error.

      It is triggered by

      #define Q_VTABLE_FUNCTION(classname, func) \
          (classname::func == QV4::Managed::func ? 0 : classname::func)
      

      in qv4managed_p.h

      The following code can reproduce the warning:

      class A {
      public:
          static void destroyed() { }
      };
      
      class B : public A
      {
      };
      
      const int tbl[1] = {
          B::destroyed == A::destroyed ? 0 : 1
      };
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-56266
          # Subject Branch Project Status CR V

          Activity

            People

              allan.jensen Allan Sandfeld Jensen
              allan.jensen Allan Sandfeld Jensen
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes