Fix developer-build with gcc 6

Locally suppress bogus tautological compare warnings.

Task-number: QTBUG-56266
Change-Id: Ic1b554982a778cdd89c8047483523c44d53bbadd
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>